--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
     <title>MUFLIX</title>
   </head>
   <body>
+    <style>
+      body{
+        background-color: rgba(255, 255, 255, 0.795);
+        margin:0;
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
