--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <body>
     <style>
       body{
-        background-color: rgba(255, 255, 255, 0.795);
+        background-color: rgb(0, 0, 0);
         margin:0;
       }
     </style>
