--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,700;900&display=swap"
       rel="stylesheet"
     />
     <title>MUFLIX</title>
@@ -19,8 +19,10 @@
   <body>
     <style>
       body{
-        background-color: rgb(0, 0, 0);
+        background-color: #0a0a0a;
         margin:0;
+        padding:0;
+        box-sizing: border-box;
       }
     </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
