--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
     <title>MUFLIX</title>
   </head>
   <body>
     <style>
-      body{
+      body {
         background-color: #0a0a0a;
-        margin:0;
-        padding:0;
+        margin: 0;
+        padding: 0;
         box-sizing: border-box;
       }
     </style>
