--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       body {
         background-color: #0a0a0a;
         margin: 0;
+        margin-top:-2rem;
         padding: 0;
         box-sizing: border-box;
       }
