wip: add some styles to load initially

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,9 +22,21 @@
       body {
         background-color: #0a0a0a;
         margin: 0;
-        margin-top:-2rem;
+        margin-top: -2rem;
         padding: 0;
         box-sizing: border-box;
+        color: #fff;
+      }
+      a {
+        text-decoration: none;
+        color: #fff;
+      }
+      a h2 {
+        font-size: 1.2rem;
+        font-weight: 300;
+        letter-spacing: 1.2px;
+        padding-right: 15px;
+        cursor: pointer;
       }
     </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
