--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
       body {
         background-color: #0a0a0a;
         margin: 0;
-        margin-top: -2rem;
+        font-family: sans-serif;
+        font-weight: normal;
         padding: 0;
         box-sizing: border-box;
         color: #fff;
